--- a/index.html
+++ b/index.html
@@ -434,30 +434,62 @@
           <h2>Our Portfolio</h2>
           <div class="portfolio-row">
             <ul class="portfolio-list">
-              <li>
-                <img src="./images/1banking.jpg" alt="banking-ui" width="360" />
+              <li class="portfolio-list li">
+                <div class="portfolio-image-container">
+                  <img
+                    src="./images/1banking.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <section class="card">
                   <h3>Banking App</h3>
                   <p class="medium-text">App</p>
                 </section>
               </li>
-              <li>
-                <img
-                  src="./images/2chashless.jpg"
-                  alt="cashless-payment"
-                  width="360"
-                />
+              <li class="portfolio-list li">
+                <div class="portfolio-image-container">
+                  <img
+                    src="./images/2chashless.jpg"
+                    alt="cashless-payment"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <section class="card">
                   <h3>Cashless Payment</h3>
                   <p class="medium-text">Marketing</p>
                 </section>
               </li>
-              <li>
-                <img
-                  src="./images/3meditation.jpg"
-                  alt="pc-screen"
-                  width="360"
-                />
+              <li class="portfolio-list li">
+                <div class="portfolio-image-container">
+                  <img
+                    src="./images/3meditation.jpg"
+                    alt="pc-screen"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <section class="card">
                   <h3>Meditation App</h3>
                   <p class="medium-text">App</p>
@@ -467,31 +499,64 @@
           </div>
           <div class="portfolio-row">
             <ul class="portfolio-list">
-              <li>
-                <img src="./images/4taxi.jpg" alt="car-steering" width="360" />
+              <li class="portfolio-list li">
+                <div class="portfolio-image-container">
+                  <img
+                    src="./images/4taxi.jpg"
+                    alt="car-steering"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <section class="card">
                   <h3>Taxi Service</h3>
                   <p class="medium-text">Marketing</p>
                 </section>
               </li>
-              <li>
-                <img
-                  src="./images/5screen.jpg"
-                  alt="phone-screen"
-                  width="360"
-                />
+              <li class="portfolio-list li">
+                <div class="portfolio-image-container">
+                  <img
+                    src="./images/5screen.jpg"
+                    alt="phone-screen"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
                 <section class="card">
                   <h3>Screen Illustrations</h3>
 
                   <p class="medium-text">Design</p>
                 </section>
               </li>
-              <li>
-                <img
-                  src="./images/6online.jpg"
-                  alt="woman-smiling"
-                  width="360"
-                />
+              <li class="portfolio-list li">
+                <div class="portfolio-image-container">
+                  <img
+                    src="./images/6online.jpg"
+                    alt="woman-smiling"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+
                 <section class="card">
                   <h3>Online Courses</h3>
 
